# pomod

./: Cargo.toml  README.md
.config/pomod/: pomod.toml
src/: app.rs  lib.rs  timer.rs
