[package]
name = "pomod"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
dirs = "5.0"
rodio = "0.17.3"
notify-rust = "4"
crossterm = { version = "0.26.1", features = ["event-stream"] }
chrono = "0.4.22"
cfonts = "1"

[profile.release]
opt-level = 3
strip = true  # Automatically strip symbols from the binary.
lto = "fat"
panic = "abort"
codegen-units = 1

[build]
rustflags = ["-C", "target-cpu=native"]
